# phd-thesis-demos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  mealy-fp.cpp
include/: Cpp-BiCCC.hpp  Cpp-arrows.hpp  function-operations.hpp  inclusive_scan.h  moore.hpp  pid.hpp  rx_scanl.hpp  test-tools.hpp
include/functor/: curried-fmap.hpp  flist.hpp  foptional.hpp  functor.hpp
include/plotting/: plot-helpers.hpp
include/trxcpp/: inclusive_scan.h
src/: category-Cpp.cpp  compute_steady_state_error_error.sh  list-functor.cpp  maybe-optional-functor.cpp  mealy-fp.cpp  moore-fp.cpp  pid-example.cpp  test-fixtures.hpp  utest-flist.cpp  utest-test-fixtures.cpp  utest-thesis-examples.cpp
